Correção de bugs com acentos e inserção de Kreutz2014

--- a/referencias.bib
+++ b/referencias.bib
@@ -109,7 +109,7 @@
 
   Author                   = {Bernal Filho, Huber},
   Month                    = sep,
-  Note                     = {{\'}Ultimo acesso em Junho de 2010},
+  Note                     = {Acesso em Junho de 2010},
   Year                     = {2003},
 
   Address                  = {Brasil},
@@ -447,6 +447,18 @@
   Timestamp                = {2011.07.24}
 }
 
+@Misc{Kreutz2014,
+  Title                    = {{Software-Defined Networking: A Comprehensive Survey 2014}},
+
+  Author                   = {Kreutz, D. and Ramos, F. M. V. and Verissimo, P. and Rothenberg, C. E. and Azodolmolky, S. and Uhlig, S.},
+  Note                     = {Acesso em junho de 2015},
+  Year                     = {2014},
+
+  Owner                    = {alaelson},
+  Timestamp                = {2015.06.17},
+  Url                      = {http://arxiv.org/abs/1406.0440.}
+}
+
 @InProceedings{Li2005,
   Title                    = {{A GMPLS Based Control Plane Testbed for End-to-End Services}},
   Author                   = {Li, G. and Yates, J. and Wang, D. and Sebos, P. and Gottlieb, J. and Greenberg, A. and Kalmanek, C. and Doverspike, R.},
@@ -618,7 +630,7 @@
 
   Author                   = {Sundvine},
   HowPublished             = {\url{https://www.sandvine.com/downloads/general/global-internet-phenomena/2014/1h-2014-global-internet-phenomena-report.pdf}},
-  Note                     = {Acessado em 16/06/15}
+  Note                     = {Acesso em junho de 2015}
 }
 
 @Misc{Walker2007,
