--- a/Apresentacao.tex
+++ b/Apresentacao.tex
@@ -148,7 +148,7 @@ O objetivo deste trabalho é fazer uma breve explanação sobre as principais tecno
 \end{tabular}
 \end{table}
 \begin{center}
-\tiny{Fonte: Ramaswami~\cite{Ramaswami2010}}
+\tiny{Fonte: (Ramaswami, 2010)~\cite{Ramaswami2010}}
 \end{center}
 }
 \frame{
@@ -161,7 +161,7 @@ O objetivo deste trabalho é fazer uma breve explanação sobre as principais tecno
 \includegraphics[width=1\textwidth]{image/mux_pdh.eps}
 \end{figure}
 \begin{center}
-\tiny{Fonte: Adaptado de Ramaswami~\cite{Ramaswami2010}}
+\tiny{Fonte: Adaptado de (Ramaswami, 2010)~\cite{Ramaswami2010}}
 \end{center}
 }
 
@@ -302,7 +302,7 @@ STS-768 & $39.814,32$ \\\hline
 \end{tabular}
 \end{table}
 \begin{center}
-\tiny{Fonte: Adaptado de Ramaswami~\cite{Ramaswami2010}}
+\tiny{Fonte: Adaptado de (Ramaswami, 2010)~\cite{Ramaswami2010}}
 \end{center}
 }
 
@@ -327,7 +327,7 @@ STM-256 & $39814,32$ \\\hline
 \end{tabular}
 \end{table}
 \begin{center}
-\tiny{Fonte: Adaptado de Ramaswami~\cite{Ramaswami2010}}
+\tiny{Fonte: Adaptado de (Ramaswami, 2010)~\cite{Ramaswami2010}}
 \end{center}
 }
 
