Inserção da conclusão da apresentação
Referências ao slide do professor.

--- a/Apresentacao.tex
+++ b/Apresentacao.tex
@@ -112,6 +112,7 @@ O objetivo deste trabalho é fazer uma breve explanação sobre as principais tecno
 				\item GMPLS: \textit{Generalized Multi-Protocol Label Switching} 
 		\end{itemize}
 \end{itemize}
+\tiny{Fonte: Slides da Disciplina de Redes Ópticas~\cite{rudge}}
 }
 
 
@@ -654,11 +655,27 @@ Conceitos básicos de SDN \cite{Kreutz2014}:
 				
 		\item<4-7>Desafios:
 			\begin{itemize}
-			\item <5->Os ROADMs (\textit{Reconfigurable Optical Add/Drop Muntiplexers}) da Padtec não suportam OpenFlow;
+			\item <5->Os ROADMs (\textit{Reconfigurable Optical Add/Drop Multiplexers}) da Padtec não suportam OpenFlow;
 			\item <6->Funções como controle, aprovisionamento e remoção de canais óticos foram necessárias; 
 			\item <7->Uma API da Padtec permitiu o desenvolvimento de um plug-in para o controlador SDN OpenDayLight (ODL).
 			\end{itemize}
 \end{itemize}
+}
+
+\section{Conclusão}
+\frame{
+\frametitle{Conclusão}
+\begin{itemize}
+	\item O aumento no tráfego de dados impulsiona a geração de novas tecnologias
+	\item Empresas e institutos de pesquisa trabalham para suprir essa demanda
+\end{itemize}
+\begin{figure}
+\centering
+\includegraphics[width=0.6\textwidth]{figuras/patentes_europa.jpg}
+\end{figure}
+\begin{center}
+	\tiny{Fonte: EPO (\url{http://www.epo.org/about-us/annual-reports-statistics/statistics/patent-applications.html})}
+\end{center}
 }
 \frame{ 
 \frametitle{}
