--- a/referencias.bib
+++ b/referencias.bib
@@ -1,6 +1,12 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
+@MISC{rudge,
+Title = {{Slides da Disciplina de Redes Opticas}},
+Author = {Felipe Rudge},
+howpublished = {\url{http://www.dsif.fee.unicamp.br/~rudge/pdf/IE008-b2_SDH-PDH_Eth=f215_vF-up.pdf}},
+note = {Acesso em 17/06/15}
+}
 
 @Book{agrawal2005lightwave,
   Title                    = {{Lightwave technology: telecommunication systems}},
